--- a/Android/app/src/main/res/layout/activity_pop_up_data_picker.xml
+++ b/Android/app/src/main/res/layout/activity_pop_up_data_picker.xml
@@ -1,11 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:orientation="vertical"
+tools:context=".PopUpDataPicker">
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Set Hour"
+        android:textSize="20sp"
+        />
+<EditText
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".PopUpDataPicker">
+    android:layout_height="wrap_content"
+    android:id="@+id/et"/>
+
+<Spinner
+    android:id="@+id/spinner"
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:layout_weight="10" />
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:orientation="horizontal"
+    android:gravity="center"
+    android:layout_weight="1">
 
 
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/set"
+        android:layout_weight="2"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:onClick="ok"/>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
+
+</LinearLayout>
